# MAFIA_GAME

./: README.md
mafia/: package-lock.json  package.json
mafia-frontend/: index.html  package-lock.json  package.json  vite.config.ts
mafia-frontend/api/: userApi.ts
mafia-frontend/src/: index.css  main.tsx  routeTree.gen.ts
mafia-frontend/src/api/: bookingApi.ts  userApi.ts
mafia-frontend/src/components/: ProtectedRoute.tsx
mafia-frontend/src/pages/: Auth.tsx  Celendar.css  Celendar.tsx  GameRoom.tsx  Lobby.tsx  Profile.tsx  Register.tsx  VoteScreen.tsx
mafia-frontend/src/redux/: profileSlice.ts  (+1 more)
mafia/src/: App.js  Main.jsx  index.js
mafia_backend/: pyproject.toml
mafia_backend/app/: alembic.ini  bot_runner.py  config.py  main.py
mafia_backend/app/alembic/: env.py
mafia_backend/app/alembic/versions/: 0eb0f34a07f8_initial_migration.py  233d755b36e4_initial_migration.py  30a60ad696bb_add_user_table.py  5337fb3c3457_initial_migration.py  7c06113eece0_init.py  7ca26a59964f_initial_migration.py  d2730c6c0c68_add_password_field_to_players.py  f330148b97e1_add_password_field_to_players.py
mafia_backend/app/api/: dependencies.py  websockets.py
mafia_backend/app/api/routes/: auth.py  booking.py  games.py  players.py
mafia_backend/app/core/: auth_logic.py  booking_logic.py  events.py  game_logic.py
mafia_backend/app/db/: crud.py  database.py  models.py  schemas.py
mafia_backend/app/routes/: auth.py
mafia_backend/app/schemas/: auth.py  booking.py
mafia_backend/app/scripts/: init_seats.py
mafia_backend/app/services/: auth.py  telegram.py
(+19 files in other folders)
