[project]
name = "mafia-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.12",
    "greenlet>=3.2.0",
    "pydantic-settings>=2.9.1",
    "python-telegram-bot>=22.0",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.1",
]
